# yfinance-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  consent_page.html  cookies.txt  justfile  script.sh  yahoo.html  yf_session.html
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
.stitchworkspace/: workspace.json
.stitchworkspace/profiles/: Code _ Tests.json  Code only.json  Full review.json  Public interface.json  Tests.json
examples/: 01_basic_usage.rs  02_fundamentals_and_search.rs  03_esg_and_analysis.rs  04_historical_actions.rs  05_concurrent_requests.rs  06_realtime_polling.rs  07_quarterly_fundamentals.rs  08_advanced_analysis.rs  09_holders_and_insiders.rs  10_convenience_methods.rs  11_builder_configuration.rs  12_advanced_client.rs  13_custom_client_and_proxy.rs  14_polars_dataframes.rs
logs/: 00_init_body.html  00_init_headers.txt  00_init_timing.txt  cookies.txt
src/: client.rs  history.rs  lib.rs  net.rs  profile.rs  types.rs
src/analysis/: api.rs  fetch.rs  mod.rs  model.rs  wire.rs
src/client/: auth.rs  constants.rs  mod.rs
src/core/: conversions.rs  currency.rs  dataframe.rs  error.rs  fixtures.rs  mod.rs  models.rs  net.rs  quotes.rs  quotesummary.rs  services.rs  wire.rs
src/core/client/: auth.rs  constants.rs  mod.rs  retry.rs
src/download/: mod.rs
src/esg/: api.rs  mod.rs  model.rs  wire.rs
src/fundamentals/: api.rs  fetch.rs  mod.rs  model.rs  wire.rs
src/history/: builder.rs  mod.rs  model.rs  params.rs  wire.rs
src/history/builder/: actions.rs  adjust.rs  assemble.rs  fetch.rs
src/holders/: api.rs  mod.rs  model.rs  wire.rs
src/internal/: net.rs
src/news/: api.rs  mod.rs  model.rs  wire.rs
src/profile/: api.rs  debug.rs  mod.rs  model.rs
src/profile/scrape/: extract.rs  mod.rs  utils.rs
src/profile/scrape/extract/: helpers.rs  mod.rs  strategies.rs
src/quote/: mod.rs
src/search/: mod.rs
src/stream/: mod.rs  yaticker.proto
src/ticker/: info.rs  isin.rs  mod.rs  model.rs  options.rs  quote.rs
tests/: analysis.rs  auth.rs  common.rs  currency.rs  currency_verification.rs  download.rs  esg.rs  fundamentals.rs  history.rs  history_smoke.rs  holders.rs  news.rs  profile.rs  profile_api_smoke.rs  profile_live.rs  profile_smoke.rs  quotes.rs  quotes_status_mapping.rs  record_live.rs  search.rs  stream.rs  ticker.rs
tests/analysis/: earnings_trend.rs  live.rs  offline.rs  price_target.rs  price_target_live.rs  retry_synthetic.rs  sorted_upgrades.rs  yahoo_error_passthrough.rs
tests/auth/: crumb_retry_synthetic.rs  negative_cookie_crumb.rs
tests/common/: mod.rs
tests/currency/: inference_live.rs  inference_offline.rs  verification.rs
tests/download/: back_adjust.rs  keepna_rounding.rs  live.rs  offline.rs  repair.rs
tests/esg/: live.rs  live_involvement.rs  offline.rs  offline_involvement.rs
tests/fixtures/: analysis_api_AAPL.json  analysis_api_GOOGL.json  analysis_api_MSFT.json  analysis_api_earningsTrend_AAPL.json  analysis_api_financialData_MSFT.json  analysis_api_recommendationTrend-financialData_MSFT.json  analysis_api_recommendationTrend-recommendationMean_MSFT.json  analysis_api_recommendationTrend_AAPL.json  analysis_api_upgradeDowngradeHistory_GOOGL.json  esg_api_esgScores_MSFT.json  fundamentals_api_AAPL.json  fundamentals_api_AMZN.json  fundamentals_api_GOOGL.json  fundamentals_api_META.json  fundamentals_api_MSFT.json  fundamentals_api_calendarEvents_META.json  fundamentals_api_earnings_AMZN.json  fundamentals_api_incomeStatementHistory_7203.T.json  fundamentals_api_incomeStatementHistory_AAPL.json  fundamentals_api_incomeStatementHistory_GS2C.DE.json  fundamentals_api_incomeStatementHistory_SAP.json  fundamentals_api_incomeStatementHistory_TSCO.L.json  history_chart_AAPL.json  history_chart_GS2C.DE.json  history_chart_MSFT.json  history_chart_VFINX.json  holders_api_AAPL.json  holders_api_institutionOwnership-fundOwnership-majorHoldersBreakdown-insiderTransactions-insiderHolders-netSharePurchaseActivity_AAPL.json  isin_search_AAPL.json  isin_search_QQQ.json  news_AAPL.json  news_latestNews_AAPL.json  news_pressRelease_AAPL.json  options_v7_AAPL.json  options_v7_AAPL_1755216000.json  options_v7_AAPL_1755820800.json  options_v7_AAPL_1756425600.json  options_v7_AAPL_1757030400.json  options_v7_AAPL_1757635200.json  options_v7_AAPL_1758240000.json  (+37 more)
tests/fundamentals/: fcf_fallback.rs  live.rs  offline.rs  retry_synthetic.rs
tests/history/: adjust.rs  adjust_from_splits_only.rs  caching_synthetic.rs  http_status_error.rs  intervals.rs  keepna_true.rs  live.rs  meta.rs  nulls_synthetic.rs  offline.rs  params.rs  ranges_new.rs  retry_synthetic.rs  smoke.rs
tests/holders/: live.rs  offline.rs
tests/news/: live.rs  offline.rs
tests/profile/: api_smoke.rs  fallback_synthetic.rs  live.rs  scrape_smoke.rs  scrape_variants_synthetic.rs
tests/quotes/: live.rs  offline.rs  retry_synthetic.rs
tests/search/: live.rs  offline.rs
tests/stream/: live.rs  offline.rs  volume_live.rs  websocket_decoder.rs
tests/ticker/: actions.rs  capital_gains.rs  fast_info.rs  history_convenience.rs  info_live.rs  info_offline.rs  isin_live.rs  isin_offline.rs  live.rs  offline.rs  options.rs  options_expiry_from_url_fallback.rs  quote.rs  shares.rs
